feat: add roadmap and admin dashboard features
- Implemented Roadmap component for generating personalized study roadmaps based on user input.
- Added AdminDashboard component for managing users, quizzes, and viewing statistics.
- Enhanced API service with new endpoints for admin functionalities including user role updates, quiz management, and leaderboard retrieval.
- Updated roadmap API to handle phase updates more effectively.